unpackaged/main/default/objects/CMPL123TMS__Notification__c/CMPL123TMS__Notification__c.object-meta.xml
<CustomObject>
    <description>Notification</description>
    <label>Notification</label>
    <nameField>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>