unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Additional_CC_Email_Addresses__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Additional_CC_Email_Addresses__c</fullName>
        <description>Additional CC Email Addresses</description>
        <inlineHelpText>Additional CC Email Addresses</inlineHelpText>
        <label>Additional CC Email Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>