unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__CC__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__CC__c</fullName>
        <description>CC</description>
        <inlineHelpText>Email CC</inlineHelpText>
        <label>CC</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>