unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Criteria__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Criteria__c</fullName>
        <description>Criteria</description>
        <inlineHelpText>Criteria</inlineHelpText>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>