unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Cron_Expression__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Cron_Expression__c</fullName>
        <description>Cron Expression</description>
        <inlineHelpText>Cron Expression</inlineHelpText>
        <label>Cron Expression</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>