unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Due_In_Days__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Due_In_Days__c</fullName>
        <description>Due In(Days)</description>
        <inlineHelpText>Due In(Days)</inlineHelpText>
        <label>Due In(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>