unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Email_Template__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Email_Template__c</fullName>
        <label>Email Template</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>