unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Hours__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Hours__c</fullName>
        <description>Hours</description>
        <inlineHelpText>Hours</inlineHelpText>
        <label>Hours</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>