unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Last_Run_Date_Time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Last_Run_Date_Time__c</fullName>
        <description>Last Run Date/Time</description>
        <inlineHelpText>Last Run Date/Time</inlineHelpText>
        <label>Last Run Date/Time</label>
        <type>DateTime</type>
    </CustomField>