unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Minutes__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Minutes__c</fullName>
        <description>Minutes</description>
        <inlineHelpText>Minutes</inlineHelpText>
        <label>Minutes</label>
        <length>5</length>
        <type>Text</type>
    </CustomField>