unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Repeat_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Repeat_Type__c</fullName>
        <label>Repeat Type</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>