unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Schedule_Job_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Schedule_Job_Id__c</fullName>
        <description>Schedule Job Id</description>
        <inlineHelpText>Schedule Job Id</inlineHelpText>
        <label>Schedule Job Id</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>