unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Scheduled_Send_Time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Scheduled_Send_Time__c</fullName>
        <label>Scheduled Send Time</label>
        <type>DateTime</type>
    </CustomField>