unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Summary__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </CustomField>