unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Type__c</fullName>
        <description>Notification type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Past Due</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>