unpackaged/main/default/objects/CMPL123TMS__Notification__c/fields/CMPL123TMS__Week_Day_only__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Week_Day_only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Week Day Only</label>
        <type>Checkbox</type>
    </CustomField>